feat: implement cart functionality with context and hooks, add filters and product display

--- a/Ecommerce/src/components/Products.css
+++ b/Ecommerce/src/components/Products.css
@@ -45,3 +45,11 @@
   object-fit: cover;
   background: #fff;
 }
+
+.deleteFromCart-btn{
+  background-color: red;
+}
+
+.addToCart-btn{
+  background-color: green;
+}
