--- a/Ecommerce/src/components/Filters.css
+++ b/Ecommerce/src/components/Filters.css
@@ -11,7 +11,7 @@
   gap: 1rem;
 }
 
-#price {
+input {
   -webkit-appearance: none;
   appearance: none;
   width: 100px;
@@ -22,7 +22,7 @@
   outline: none;
 }
 
-#price::-webkit-slider-thumb {
+input::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 14px;
@@ -32,7 +32,7 @@
   cursor: pointer;
 }
 
-#price::-moz-range-thumb {
+input::-moz-range-thumb {
   width: 14px;
   height: 14px;
   border-radius: 50%;
